Implementa funcionalidad de login, Register y JWT en el proyecto

--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,5 @@ HOST_DB = localhost
 PORT_DB = 5432
 USER_DB = postgres
 PASS_DB = admin
-NAME_DB = pruebitas
+NAME_DB = equipos
+SECRET_JWT = CODIGO MUY IMPORTANTE, SOY CESAR
