Implementacion de roles para las peticiones en seleccion

--- a/.env.development
+++ b/.env.development
@@ -3,5 +3,5 @@ HOST_DB = localhost
 PORT_DB = 5432
 USER_DB = postgres
 PASS_DB = admin
-NAME_DB = equipos
+NAME_DB = pruebitas
 SECRET_JWT = CODIGO MUY IMPORTANTE, SOY CESAR
