--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,12 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
+.env.development.local
 .env.development
+.env.test.local
+.env.production.local
+.env.production
+.env.local
 
 #Nombre de JWT
 /src/auth/constants/constants.ts
